--- a/style.css
+++ b/style.css
@@ -1,28 +1,26 @@
 body {
     font-family: 'Slackey', cursive;
-    background-color: darkgreen;
+    background-color: black;
     background-size: cover;
     padding: 1px 0;
     padding-top: 0;
 }
 
 .pageTitle {
-    /*text*/
+    border: 1px solid darkorange;
+    background-color: rebeccapurple;
+    min-width: 200px; width: 100%; max-width: 2000px;
+    padding: .1%;
+    margin-bottom: 1%;
     color: darkorange;  
     font-size: 40px;
     text-align: center;
-    /*block*/
-    border: 1px solid darkorange;
-    background-color: darkgreen
-    ;
-    min-width: 200px; width: 100%; max-width: 2000px;
-    padding: .1%;
 }
 
 canvas {
-    /*block*/
-    border: 1px solid darkorange;
+    /*border: 1px solid darkorange;*/
     min-height: 200px; height: 100%; max-height: 2000px;
     min-width: 200px; width: 100%; max-width: 2000px;
     margin: .5% .25%; float: left;
+    box-shadow: 0px 0px 5px 5px darkgreen;
 }
