--- a/style.css
+++ b/style.css
@@ -2,23 +2,10 @@ body {
     font-family: 'Slackey', cursive;
     background-color: black;
     background-size: cover;
-    padding: 1px 0;
-    padding-top: 0;
-}
-
-.pageTitle {
-    border: 1px solid darkorange;
-    background-color: rebeccapurple;
-    min-width: 200px; width: 100%; max-width: 2000px;
-    padding: .1%;
-    margin-bottom: 1%;
-    color: darkorange;  
-    font-size: 40px;
-    text-align: center;
+    padding: 1%;
 }
 
 canvas {
-    /*border: 1px solid darkorange;*/
     min-height: 200px; height: 100%; max-height: 2000px;
     min-width: 200px; width: 100%; max-width: 2000px;
     margin: .5% .25%; float: left;
