--- a/js/views/home/homeTmpl.html
+++ b/js/views/home/homeTmpl.html
@@ -5,7 +5,7 @@
     <br>
     <br>
     <!--Options-->
-		<div class="options">OPTIONS
-		<a href="/#/options">option</a>
+		<div class="options">
+		<a href="/#/options">OPTION</a>
 		</div>
 </div>
