--- a/css/optionsStyle.css
+++ b/css/optionsStyle.css
@@ -50,24 +50,6 @@
     color: orangered; border: 1px solid orangered;
 }
 
-.applyButton a{
-    border: 1px solid orange;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.5);
-    font-size: 25px;
-    font-family: 'Slackey', cursive;
-    height: 35px;
-    width: 125px;
-    text-align: center;
-    position: relative;
-    margin: 5% 5% 0 0;
-    float: right;
-}
-.applyButton a:link {color: orange; border: 1px solid orange; text-decoration: none;}
-.applyButton a:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.applyButton a:hover {color: orangered; border: 1px solid orangered; text-decoration: none;}
-.applyButton a:link {color: orange; border: 1px solid orange; text-decoration: none;}
-
 .backButton {
     border: 1px solid darkorange;
     border-radius: 10px;
@@ -78,8 +60,7 @@
     height: 35px;
     width: 125px;
     text-align: center;
-    margin: 5% 0 0 5%;
-    float: left;
+    margin: auto;
 }
 .backButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
 .backButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
