--- a/css/pauseStyle.css
+++ b/css/pauseStyle.css
@@ -1,14 +1,69 @@
-.pauseMenu {
+.PauseMenu {  
+    border: 1px solid silver;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    background-color: midnightblue;
+    color: white;
+    text-align: center;
+    font-size: 36px;
+    min-height: 200px; max-height: 250px;
+    min-width: 200px; max-width: 300px;
+    position: fixed;
+    margin: auto;
+    top: 5%;
+    right: 0;
+    bottom: 0;
+    left: 0;  
+}
+
+.pauseOptionsButton {
     border: 1px solid darkorange;
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
     color: orange;
     font-size: 25px;
     font-family: 'Slackey', cursive;
-    height: 40px;
-    width: 198px;
+    height: 35px;
+    width: 150px;
     text-align: center;
-    position: relative;
     margin: auto;
-    top: 25%;
 }
+.pauseOptionsButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
+.pauseOptionsButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
+.pauseOptionsButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none;
+                           height: 40px; width: 175px; font-size: 30px;}
+
+.pauseResumeButton {
+    border: 1px solid darkorange;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    color: orange;
+    font-size: 35px;
+    font-family: 'Slackey', cursive;
+    height: 50px;
+    width: 200px;
+    text-align: center;
+    margin: auto;
+}
+.pauseResumeButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
+.pauseResumeButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
+.pauseResumeButton:hover {color: lime; border: 1px solid lime; text-decoration: none;
+                          height: 55px; width: 205px; font-size: 40px;}
+
+
+.pauseHomeButton {
+    border: 1px solid darkorange;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    color: orange;
+    font-size: 25px;
+    font-family: 'Slackey', cursive;
+    height: 35px;
+    width: 150px;
+    text-align: center;
+    margin: auto;
+}
+.pauseHomeButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
+.pauseHomeButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
+.pauseHomeButton:hover {color: red; border: 1px solid darkred; text-decoration: none;
+                        height: 40px; width: 155px; font-size: 30px;}
