--- a/css/scoreBoardStyle.css
+++ b/css/scoreBoardStyle.css
@@ -23,14 +23,14 @@
     font-family: 'Slackey', cursive;
     color: darkorange;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     height: 30px;
     width: 125px;
     margin: 1% 1% 1% 5%;
     float: left;
 }
-.homePageButton:hover {color: orangered; border: 1px solid orangered;}
-
+.homePageButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none; 
+                  height: 35px; width: 135px; font-size: 20px;}
 
 .optionsPageButton{
     border: 1px solid darkorange;
@@ -39,14 +39,14 @@
     font-family: 'Slackey', cursive;
     color: darkorange;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     height: 30px;
     width: 125px;   
     margin: 1% 5% 1% 1%;
     float: right;
 }
-.optionsPageButton:hover {color: orangered; border: 1px solid orangered;}
-
+.optionsPageButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none; 
+                  height: 35px; width: 130px; font-size: 20px;}
 .scoreSheet {
     border: 1px solid silver;
     border-radius: 5px;
