--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -1,55 +1,25 @@
+.gamePlay {
+    font-family: 'Slackey', cursive;
+    text-align: center;     
+    /*border: 1px solid white;*/
+    height: 100%;
+    width: 100%; 
+}
+.gameHeader {
+    background-color: midnightblue; 
+    border-radius: 10px;
+    border: 1px solid darkorange;  
+    text-align: center;     
+    font-size: 36px;    
+    color: darkorange;
+    margin: auto;
+}
+
 canvas {
-    min-height: 200px; height: 100%; max-height: 2000px;
-    min-width: 200px; width: 100%; max-width: 2000px;
+    min-height: 200px; height: 100%; max-height: 600px;
+    min-width: 200px; width: 100%; max-width: 600px;
     margin: .5% .5%;
     background-color: darkgreen;
     box-shadow: 0px 0px 5px 5px darkgreen;
     border-radius: 5px;
 }
-.gamePlay {
-    border: 1px solid darkorange;
-    border-radius: 10px;
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.5);    
-    background-color: midnightblue;
-    color: darkorange;
-    font-size: 36px;
-    font-family: 'Slackey', cursive;
-    text-align: center;
-    margin: 0 0 1% 0;
-}
-
-.gameHomeButton {
-    border: 1px solid orange;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, 0.5);
-    background-color: midnightblue;
-    color: orange;
-    height: 25px;
-    width: 25px;
-    font-size: 15px;
-    text-align: center;
-    margin: auto;
-}
-.homeButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
-.homeButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseMenu:hover {color: orangered; border: 1px solid orangered; text-decoration: none; 
-                  height: 30px; width: 30px; font-size: 30px;}
-                  
-.gamePauseMenu {
-    border: 1px solid orange;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, 0.5);
-    background-color: midnightblue;
-    color: orange;
-    height: 25px;
-    width: 25px;
-    font-size: 15px;
-    text-align: center;
-    margin: auto;
-}
-.pauseMenu:link {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseMenu:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseMenu:hover {color: orangered; border: 1px solid orangered; text-decoration: none; 
-                  height: 30px; width: 30px; font-size: 30px;}
