--- a/css/pauseStyle.css
+++ b/css/pauseStyle.css
@@ -1,5 +1,4 @@
 .PauseMenu {
-    display: none;
     border: 1px solid silver;
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
@@ -22,49 +21,31 @@
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
     color: orange;
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Slackey', cursive;
-    height: 35px;
-    width: 150px;
+    height: 40px;
+    width: 175px;
     text-align: center;
-    margin: auto;
+    margin: 7.5% 0;
 }
 .pauseOptionsButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
 .pauseOptionsButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseOptionsButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none;
-                           height: 40px; width: 175px; font-size: 30px;}
-
-.pauseResumeButton {
-    border: 1px solid darkorange;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.5);
-    color: orange;
-    font-size: 35px;
-    font-family: 'Slackey', cursive;
-    height: 50px;
-    width: 200px;
-    text-align: center;
-    margin: auto;
-}
-.pauseResumeButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseResumeButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseResumeButton:hover {color: lime; border: 1px solid lime; text-decoration: none;
-                          height: 55px; width: 205px; font-size: 40px;}
-
+.pauseOptionsButton:hover {color: yellow; border: 1px solid yellow; text-decoration: none;
+                           height: 45px; width: 200px; font-size: 32.5px;}
 
 .pauseHomeButton {
     border: 1px solid darkorange;
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
     color: orange;
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Slackey', cursive;
-    height: 35px;
-    width: 150px;
+    height: 40px;
+    width: 175px;
     text-align: center;
-    margin: auto;
+    margin: 7.5% 0;
 }
 .pauseHomeButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
 .pauseHomeButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseHomeButton:hover {color: red; border: 1px solid darkred; text-decoration: none;
-                        height: 40px; width: 155px; font-size: 30px;}
+.pauseHomeButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none;
+                        height: 45px; width: 200px; font-size: 35px;}
