--- a/css/scoreBoardStyle.css
+++ b/css/scoreBoardStyle.css
@@ -45,7 +45,7 @@
     margin: 1% 5% 1% 1%;
     float: right;
 }
-.optionsPageButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none; 
+.optionsPageButton:hover {color: yellow; border: 1px solid yellow; text-decoration: none; 
                   height: 35px; width: 130px; font-size: 20px;}
 .scoreSheet {
     border: 1px solid silver;
