--- a/css/pauseStyle.css
+++ b/css/pauseStyle.css
@@ -1,11 +1,11 @@
 .PauseMenu {
-    border: 1px solid silver;
-    border-radius: 10px;
+    border: 2px solid silver;
+    border-radius: 50px;
     background: rgba(0, 0, 0, 0.5);
     background-color: midnightblue;
     color: white;
     text-align: center;
-    font-size: 36px;
+    font-size: 50px;
     min-height: 200px; max-height: 250px;
     min-width: 200px; max-width: 300px;
     position: fixed;
@@ -14,10 +14,17 @@
     right: 0;
     bottom: 0;
     left: 0;  
+-webkit-box-shadow: inset 0px 0px 130px 30px rgba(255,255,255,1);
+-moz-box-shadow: inset 0px 0px 130px 30px rgba(255,255,255,1);
+box-shadow: inset 0px 0px 130px 30px rgba(255,255,255,1);
+
+-webkit-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+-moz-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
 }
 
 .pauseOptionsButton {
-    border: 1px solid darkorange;
+    border: 2px solid darkorange;
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
     color: orange;
@@ -28,13 +35,13 @@
     text-align: center;
     margin: 7.5% 0;
 }
-.pauseOptionsButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseOptionsButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseOptionsButton:hover {color: yellow; border: 1px solid yellow; text-decoration: none;
+.pauseOptionsButton:link {color: orange; border: 2px solid orange; text-decoration: none;}
+.pauseOptionsButton:visited {color: orange; border: 2px solid orange; text-decoration: none;}
+.pauseOptionsButton:hover {color: yellow; border: 2px solid yellow; text-decoration: none;
                            height: 45px; width: 200px; font-size: 32.5px;}
 
 .pauseHomeButton {
-    border: 1px solid darkorange;
+    border: 2px solid darkorange;
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
     color: orange;
@@ -45,7 +52,7 @@
     text-align: center;
     margin: 7.5% 0;
 }
-.pauseHomeButton:link {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseHomeButton:visited {color: orange; border: 1px solid orange; text-decoration: none;}
-.pauseHomeButton:hover {color: orangered; border: 1px solid orangered; text-decoration: none;
+.pauseHomeButton:link {color: orange; border: 2px solid orange; text-decoration: none;}
+.pauseHomeButton:visited {color: orange; border: 2px solid orange; text-decoration: none;}
+.pauseHomeButton:hover {color: orangered; border: 2px solid orangered; text-decoration: none;
                         height: 45px; width: 200px; font-size: 35px;}
