--- a/css/gameOverStyle.css
+++ b/css/gameOverStyle.css
@@ -14,14 +14,13 @@
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;  
-    
--webkit-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
--moz-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+    left: 0;     
+    -webkit-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+    -moz-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+    box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
 }
 
-.submission {
+.gameOverModal {
     border: 2px solid orangered;
     border-radius: 15px;
     background: rgba(0, 0, 0, 0.5);
