--- a/public/app/app-styles/headerStyle.css
+++ b/public/app/app-styles/headerStyle.css
@@ -13,7 +13,7 @@ width: 100%;
 /*border: 1px solid yellowgreen;*/
 border-radius: 30px; 
 box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); -webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);-moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
-background-image: url('/Interface/app/app-images/grey-stone.jpg');
+background-image: url('/app/app-images/grey-stone.jpg');
 background-repeat: no-repeat; 
 background-size: cover;
 width: 100%;
@@ -25,7 +25,7 @@ a#headerSpace { color: white; text-decoration: none; }
 .gameIcon { font-family: 'Slackey', cursive; text-align: center; font-size: 500%; text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
 /*border: 1px solid yellowgreen;*/
 box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); -webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);-moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
-background-image: url('/Interface/app/app-images/jungle.jpg');
+background-image: url('/app/app-images/jungle.jpg');
 background-repeat: no-repeat; 
 background-size: cover;
 min-width: 500px;
