--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -1,9 +1,9 @@
 html { color: white; 
-/*border: 1px solid darkred;*/
+border: 1px solid darkred;
 box-shadow: inset 7.5px -7.5px 300px 200px rgba(0,0,0,1);-webkit-box-shadow: inset 7.5px -7.5px 300px 200px rgba(0,0,0,1);-moz-box-shadow: inset 7.5px -7.5px 300px 200px rgba(0,0,0,1);
 background-color: black;
 height: 1485px;
 width: 980px;
  }
  
-body { /*border: 1px solid red;*/ }
+body { border: 1px solid red; }
