--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,55 @@
-html { color: white; 
-border: 1px solid darkred;
-box-shadow: inset 7.5px -7.5px 300px 200px rgba(0,0,0,1);
--webkit-box-shadow: inset 7.5px -7.5px 300px 200px rgba(0,0,0,1);
--moz-box-shadow: inset 7.5px -7.5px 300px 200px rgba(0,0,0,1);
+html { 
+/*border: 1px solid rgba(255,0,0,.75);*/
 background-color: black;
 }
-a { 
-color: rgba(255,255,255,1); text-decoration: none; 
+.title { 
+    font-family: 'Slackey', cursive; 
+    text-shadow: -4px 4px 2px rgba(0,0,0,1);
+    color: rgb(255,255,255); 
+    text-align: center;
+    font-size: 5vw;
+/*border: 1px solid rgb(255,255,0);*/
+box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
+-webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+-moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+background-image: url('/media/jungle.jpg');
+background-repeat: no-repeat; 
+background-size: cover;
+width: 100%;
+height: 12.5vh;
+margin: auto;
 }
+.margin {    
+    font-family: 'Slackey', cursive; 
+    text-align: center; 
+    text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
+/*border: 1px solid rgb(0,255,0);*/
+display: inline-flex;
+width: 100%;  
+}
+.button { 
+    font-family: 'Slackey', cursive; 
+    text-align: center; font-size: 175%; 
+    text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
+/*border: 1px solid rgb(0,150,0);*/
+border-radius: 1.25vw; 
+box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
+-webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+-moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+background-image: url('/media/stone.jpg');
+background-repeat: no-repeat; 
+background-size: cover;
+height: 10vh;
+width: 100%;
+padding: .5%;
+margin: .5%;
+}
+a.button { color: white; text-decoration: none; }
+a.button:hover { color: yellow; text-decoration: none; }
 .canvas { font-family: 'Slackey', cursive;
-border: 1px solid purple;
+border: 1px solid rgb(0,0,255);
 min-height: 57.5vh;
+width: 100%;
 box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
 -webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
 -moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
@@ -18,3 +57,43 @@ background-image: url('/media/dirt.jpg');
 background-repeat: no-repeat; 
 background-size: cover;   
 }
+.copyright { 
+    font-family: 'Slackey', cursive;
+    text-align: center; 
+    color: rgb(255,255,255);
+/*border: 1px solid rgba(0,0,255,.5);*/
+}
+.optModal { 
+            text-align: center;
+            color: white;
+            text-shadow: -4px 4px 2px rgba(0,0,0,1);
+            font-family: 'Slackey', cursive;
+            font-size: 2.5vh;
+    border: 1px solid rgba(0, 150, 255,.25);
+    background-image: url('/media/stone.jpg');
+    box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
+    -webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+    -moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+    max-height: 200px; min-height: 50vh; top: calc(32.5vh);
+    max-width: 200px; min-width: 50vw; left: calc(12.5vw);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    margin: auto;   
+}
+
+.optButton {   
+    color: rgba(0,0,0,.5);
+    text-shadow: 0px 0px 2.5px rgba(50,25,0,.5);
+    font-size: 2.5vh;
+background-image: url('/media/stone.jpg');
+background-size: cover;
+border: 1px solid rgba(0,155,255,.75);
+height: 7.5vh;
+margin: auto;
+    }
+.optButton:hover { 
+    color: rgba(150,25,0,.5);
+    font-size: 3vh;
+    text-shadow: 0px 0px 2.5px rgba(255,255,255,.5);
+} 
