--- a/css/index.css
+++ b/css/index.css
@@ -28,9 +28,11 @@ display: inline-flex;
 width: 100%;  
 }
 .button { 
-    font-family: 'Slackey', cursive; 
-    text-align: center; font-size: 175%; 
+    font-family: 'Slackey', cursive;
+    color: rgba(255,255,200,.75); 
     text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
+    text-decoration: none;
+    font-size: 2.5vw;
 /*border: 1px solid rgb(0,150,0);*/
 border-radius: 1.25vw; 
 box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
@@ -41,11 +43,13 @@ background-repeat: no-repeat;
 background-size: cover;
 height: 10vh;
 width: 100%;
-padding: .5%;
+padding-top: 2.5vh;
 margin: .5%;
 }
-a.button { color: white; text-decoration: none; }
-a.button:hover { color: yellow; text-decoration: none; }
+a.button:hover { 
+    color: rgba(255,255,255,1); 
+    text-decoration: none; 
+}
 .canvas { font-family: 'Slackey', cursive;
 border: 1px solid rgb(0,0,255);
 min-height: 57.5vh;
@@ -69,19 +73,19 @@ background-size: cover;
             text-shadow: -4px 4px 2px rgba(0,0,0,1);
             font-family: 'Slackey', cursive;
             font-size: 2.5vh;
-    border: 1px solid rgba(0, 150, 255,.25);
+    /*border: 1px solid rgba(0, 150, 255,.25);*/
+    border-radius: 1.25vw;
     background-image: url('/media/stone.jpg');
     box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
     -webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
     -moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
-    max-height: 200px; min-height: 50vh; top: calc(32.5vh);
-    max-width: 200px; min-width: 50vw; left: calc(12.5vw);
+    height: 50vh; top: calc(30vh);
+    width: 50vw; left: calc(25vw);
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
     margin: auto;   
 }
-
 .optButton {   
     color: rgba(0,0,0,.5);
     text-shadow: 0px 0px 2.5px rgba(50,25,0,.5);
@@ -90,8 +94,9 @@ background-image: url('/media/stone.jpg');
 background-size: cover;
 border: 1px solid rgba(0,155,255,.75);
 height: 7.5vh;
-margin: auto;
-    }
+width: 50%;
+margin: 5vh auto;
+}
 .optButton:hover { 
     color: rgba(150,25,0,.5);
     font-size: 3vh;
