--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,15 @@ html {
 /*border: 1px solid rgba(255,0,0,.75);*/
 background-color: black;
 }
+p {
+    color: white;
+    text-shadow: -4px 4px 2px rgba(0,0,0,1);
+    text-align: center;
+    font-size: 3.75vw; 
+/*border: 1px solid rgba(150,50,0,.75);*/
+width: 100%;
+line-height: 0;    
+ }
 .title { 
     font-family: 'Slackey', cursive; 
     text-shadow: -4px 4px 2px rgba(0,0,0,1);
@@ -29,8 +38,8 @@ width: 100%;
 }
 .button { 
     font-family: 'Slackey', cursive;
-    color: rgba(255,255,200,.75); 
-    text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
+    color: rgba(0,0,0,.675);
+    text-shadow: 0px .25vh .05vw rgba(250, 250, 200,.75);
     text-decoration: none;
     font-size: 2.5vw;
 /*border: 1px solid rgb(0,150,0);*/
@@ -47,11 +56,13 @@ padding-top: 2.5vh;
 margin: .5%;
 }
 a.button:hover { 
-    color: rgba(255,255,255,1); 
+    color: rgba(255,255,255,1);  
+    text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
     text-decoration: none; 
 }
-.canvas { font-family: 'Slackey', cursive;
-border: 1px solid rgb(0,0,255);
+.canvas { 
+    font-family: 'Slackey', cursive;
+/*border: 1px solid rgb(0,0,255);*/
 min-height: 57.5vh;
 width: 100%;
 box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
@@ -68,37 +79,73 @@ background-size: cover;
 /*border: 1px solid rgba(0,0,255,.5);*/
 }
 .optModal { 
-            text-align: center;
-            color: white;
-            text-shadow: -4px 4px 2px rgba(0,0,0,1);
-            font-family: 'Slackey', cursive;
-            font-size: 2.5vh;
-    /*border: 1px solid rgba(0, 150, 255,.25);*/
-    border-radius: 1.25vw;
-    background-image: url('/media/stone.jpg');
-    box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
-    -webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
-    -moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
-    height: 50vh; top: calc(30vh);
-    width: 50vw; left: calc(25vw);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    margin: auto;   
+    font-family: 'Slackey', cursive;
+/*border: 1px solid rgba(0, 150, 255,.25);*/
+border-radius: 1.25vw;
+background-image: url('/media/stone.jpg');
+box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1); 
+-webkit-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+-moz-box-shadow: inset 0px -5px 30px 15px rgba(0,0,0,1);
+height: 50vh; top: calc(30vh);
+width: 50vw; left: calc(25vw);
+background-repeat: no-repeat;
+background-size: cover;
+position: absolute;
+margin: auto;   
 }
 .optButton {   
-    color: rgba(0,0,0,.5);
-    text-shadow: 0px 0px 2.5px rgba(50,25,0,.5);
-    font-size: 2.5vh;
-background-image: url('/media/stone.jpg');
-background-size: cover;
-border: 1px solid rgba(0,155,255,.75);
+    font-family: 'Slackey', cursive; 
+    color: rgba(0,0,0,.675);
+    text-shadow: 0px .25vh .05vw rgba(250, 250, 200,.75);
+    font-size: 2.5vw;
+/*border: 1px solid rgba(0,0,255,1);*/
+border: 1px solid rgba(0,0,0,0);
+background-color: rgba(0,0,0,0);
 height: 7.5vh;
-width: 50%;
-margin: 5vh auto;
+width: 100%;
+margin: 3.75vh auto;
 }
 .optButton:hover { 
-    color: rgba(150,25,0,.5);
-    font-size: 3vh;
-    text-shadow: 0px 0px 2.5px rgba(255,255,255,.5);
+    color: rgba(175,25,0,.75);
+    text-shadow: 0px .25vh .05vw rgba(250, 250, 200,.75);
 } 
+.score { 
+    font-family: 'Slackey', cursive;
+    font-size: 2.5vw;
+    color: white;
+    text-shadow: -4px 4px 2px rgba(0,0,0,1);
+    text-align: center;
+border: 1px solid rgba(0, 150, 255,1);
+border-radius: 1.25vw;
+height: 50vh; top: calc(30vh);
+width: 50vw; left: calc(25vw);
+-webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
+-moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
+box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
+background-color: rgba(0,0,0,.5);
+overflow-y: auto;
+position: absolute;
+margin: auto;   
+}
+.scoreRow {
+border: 1px solid rgba(0, 150, 255,.75);
+border-radius: .75vw;
+display: inline-flex;
+width: 100%;
+}
+.scoreCol {
+border: 1px solid rgba(0, 150, 255,.25);
+border-radius: .5vw;
+max-height: 200px;
+width: 100%;
+}
+.game { 
+border: 1px solid rgba(150,0,250,1);
+height:57.5vh;
+width: 57.5vh;
+-webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
+-moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
+box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
+background-color: rgba(0,0,0,.5);
+margin: auto;   
+}
