--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ background-size: cover;
     color: rgb(255,255,255);
 /*border: 1px solid rgba(0,0,255,.5);*/
 }
-.optModal { 
+.optMod { 
     font-family: 'Slackey', cursive;
 /*border: 1px solid rgba(0, 150, 255,.25);*/
 border-radius: 1.25vw;
@@ -117,14 +117,13 @@ margin: 3.75vh auto;
     text-align: center;
 border: 1px solid rgba(0, 150, 255,1);
 border-radius: 1.25vw;
-height: 50vh; top: calc(30vh);
-width: 50vw; left: calc(25vw);
+height: 57.5vh;
+width: 57.5vh;
 -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
 -moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
 box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
 background-color: rgba(0,0,0,.5);
 overflow-y: auto;
-position: absolute;
 margin: auto;   
 }
 .scoreRow {
@@ -149,3 +148,28 @@ box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
 background-color: rgba(0,0,0,.5);
 margin: auto;   
 }
+.psMod {    
+    font-family: 'Slackey', cursive;
+    font-size: 2.5vw;
+    color: white;
+    text-shadow: -4px 4px 2px rgba(0,0,0,1);
+    text-align: center;
+height:57.5vh;
+width: 57.5vh;
+-webkit-box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.5);
+-moz-box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.5);
+box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.5);
+background-color: rgba(0,0,0,.5);
+padding-top: 25vh;
+margin: auto;
+}
+.psTxt {     
+    font-family: 'Slackey', cursive; 
+    color: rgba(0,0,0,.675);
+    text-shadow: 0px .25vh .05vw rgba(250, 250, 200,.75);
+    font-size: 2.5vw; 
+    }
+.psTxt:hover { 
+    color: white;
+    text-shadow: -4px 4px 2px rgba(0,0,0,1);
+} 
