--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ a.button:hover {
     text-shadow: -4px 4px 2px rgba(0, 0, 0, 1);
     text-decoration: none; 
 }
-.canvas { 
+.backDrop { 
     font-family: 'Slackey', cursive;
 /*border: 1px solid rgb(0,0,255);*/
 min-height: 57.5vh;
@@ -139,14 +139,14 @@ max-height: 200px;
 width: 100%;
 }
 .game { 
-border: 1px solid rgba(150,0,250,1);
+/*border: 1px solid rgba(150,0,250,1);*/
 height:57.5vh;
 width: 57.5vh;
--webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
--moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
-background-color: rgba(0,0,0,.5);
-margin: auto;   
+-webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
+-moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
+box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
+/*background-color: rgba(0,0,0,.25);*/
+margin: auto; left:0;right:0; 
 }
 .psMod {    
     font-family: 'Slackey', cursive;
