--- a/css/index.css
+++ b/css/index.css
@@ -118,11 +118,11 @@ margin: 3.75vh auto;
 border: 1px solid rgba(0, 150, 255,1);
 border-radius: 1.25vw;
 height: 57.5vh;
-width: 57.5vh;
+width: 57.5vh; /*
 -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
 -moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
 box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
-background-color: rgba(0,0,0,.5);
+background-color: rgba(0,0,0,.5); */
 overflow-y: auto;
 margin: auto;   
 }
@@ -142,24 +142,21 @@ width: 100%;
 /*border: 1px solid rgba(150,0,250,1);*/
 height:57.5vh;
 width: 57.5vh;
--webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
--moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
+-webkit-box-shadow: 0px 0px 2.5vw 1.25vw rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 2.5vw 1.25vw rgba(0,0,0,0.75);
+box-shadow: 0px 0px 2.5vw 1.25vw rgba(0,0,0,0.75);
 /*background-color: rgba(0,0,0,.25);*/
 margin: auto; left:0;right:0; 
 }
 .psMod {    
     font-family: 'Slackey', cursive;
-    font-size: 2.5vw;
+    font-size: 5vw;
     color: white;
     text-shadow: -4px 4px 2px rgba(0,0,0,1);
     text-align: center;
 height:57.5vh;
 width: 57.5vh;
--webkit-box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.5);
--moz-box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.5);
-box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.5);
-background-color: rgba(0,0,0,.5);
+background-color: rgba(0,0,0,.75);
 padding-top: 25vh;
 margin: auto;
 }
@@ -172,4 +169,39 @@ margin: auto;
 .psTxt:hover { 
     color: white;
     text-shadow: -4px 4px 2px rgba(0,0,0,1);
-} 
+}
+.gameOverMenu{
+    display: none;
+    border: 4px solid orangered;
+    border-radius: 50px;
+    background-color: midnightblue;
+    font-size: 70px;
+    font-family: 'Slackey', cursive;
+    color: orangered;
+    text-align: center;
+    min-height: 200px; max-height: 200px;
+    min-width: 200px; max-width: 600px;
+    position: fixed;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;     
+    -webkit-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+    -moz-box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+    box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.51);
+}
+
+.gameOverModal {
+    border: 2px solid orangered;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.5);
+    font-family: 'Slackey', cursive;
+    font-size: 30px;
+    color: coral;
+    text-align: center;
+    font-size: 30px;
+    min-height: 50px;
+    min-width: 100px;
+    margin: auto;
+}
