--- a/public/css/index.css
+++ b/public/css/index.css
@@ -173,7 +173,7 @@ margin: auto;
     color: white;
     text-shadow: -4px 4px 2px rgba(0,0,0,1);
 }
-.goMod{
+.scoreSubmit{
     font-family: 'Slackey', cursive;
     font-size: 2.5vw;
     color: white;
@@ -204,7 +204,7 @@ margin: auto;top:10.625vh;right:0;bottom:0;left:0;
 /*border: 1px solid rgb(255,0,0); */
 margin: auto;
 }
-.goSubmit {
+.player {
     font-family: 'Slackey', cursive;
     font-size: 2.5vw;
     color: white;
