--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-html { margin:0; padding:0; background-color: rgb(0,0,0); }
-body { margin:0; padding:0; font-family: 'Slackey', cursive; text-align: center; color: white; }
+html { margin:0; padding:0; }
+body { margin:0; padding:0; }
 
 .container { 
+    font-family: 'Slackey', cursive; 
+    text-align: center; 
+    color: white;
+
     margin:0; padding:0; 
-    background-color: rgba(0,0,0,.25); 
-    height: 100vh; 
-    width: 100%;
+    background-color: rgb(0,0,0); 
+    min-height:100vh; max-height:1024px;
+    min-width: 100%; max-width: 768px;
 }
 
 .title { 
@@ -30,7 +34,7 @@ body { margin:0; padding:0; font-family: 'Slackey', cursive; text-align: center;
 }
 
 .button { 
-    margin: .5%; padding: 6.25% 0;
+    margin: .5%; padding: 6% 0;
     
     color: rgba(0,0,0,.675);
     font-size: 250%;
